<resources>
    <string name="app_name">SchistoSPro</string>
    <string name="btn_start_extraction">Iniciar Extração de Frames</string>
    <string name="start">Inicio</string>
    <string name="end">Fim</string>
    <string name="time">Tempo</string>
    <string name="time_0">00:00s</string>
    <string name="select_time">Selecionar Tempo</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="q2">Q2</string>
    <string name="q1">Q1</string>
    <string name="q3">Q3</string>
    <string name="q4">Q4</string>
    <string name="experiment_code">Código do Experimento</string>
    <string name="listitem_experiment_code">Código: </string>
    <string name="label">Label</string>
    <string name="btn_start">INICIAR</string>
    <string name="register_experiment_before_begin">Cadastre o experimento no sistema antes de iniciar</string>
    <string name="continue_video_analise">Continue para selecionar o vídeo da analise</string>
    <string name="interval">Intervalo</string>
    <string name="experiment_time">Tempo do Experimento</string>
    <string name="experiment">Experimento</string>
    <string name="experiments">Experimentos</string>
    <string name="experiment_notfound">Experimento não encontrado</string>
    <string name="type_experiment_code">Digite o código do experimento</string>
    <string name="experiment_already_exists">Experimento já cadastrado</string>
    <string name="frame">Frame</string>
    <string name="frames">Frames</string>
    <string name="frames_count">Frames: %s</string>
    <string name="frames_uploaded">Upload de frames concluído</string>
    <string name="interval_attr">Intervalo: %d</string>
    <string name="analisis">Análises</string>
    <string name="analisis_exclude">Excluir Análises</string>
    <string name="frames_exclude">Excluir Frames</string>
    <string name="analisis_exclude_x">Deseja excluir %d análise?</string>
    <string name="analisis_exclude_x_plural">Deseja excluir %d análises?</string>
    <string name="experiment_exclude">Excluir Experimentos</string>
    <string name="experiment_exclude_x">Deseja excluir %d experimento?</string>
    <string name="experiment_exclude_x_plural">Deseja excluir %d experimentos?</string>
    <string name="frame_exclude_x">Deseja excluir %d frame?</string>
    <string name="frame_exclude_x_plural">Deseja excluir %d frames?</string>
    <string name="x_selected">%d selecionado(s)</string>
    <string name="extracting_frames">Extraindo Frames</string>
    <string name="save_analisis">Salvar Análise</string>
    <string name="select_video">Selecionar Vídeo</string>
    <string name="configurations">Configurações</string>
    <string name="save">Salvar</string>
    <string name="saving">Salvando</string>
    <string name="upload">Upload</string>
    <string name="board">Placa</string>
    <string name="board_value">Placa: %s</string>
    <string name="no_experiments">Nenhum experimento cadastrado</string>
    <string name="no_analisis">Nenhuma análise cadastrada nesse experimento</string>
    <string name="no_frames">Nenhum frame vinculado a essa análise</string>
    <string name="api_port">Porta da API</string>
    <string name="api_url">Endereço da API</string>
    <string name="frames_per_second">Extrair frame a cada quantos milissegundos (ms)</string>
    <string name="title">Título</string>
    <string name="sync_warning_analise">Essa análise não foi salva no servidor, \nclique para sincronizar</string>
    <string name="syncing_warning_analise">Sincronizando …</string>
    <string name="server_analisis_notfound">Análise não cadastrada no servidor</string>
    <string name="synchronize">Sincronizar</string>
    <string name="analisis_successfully_registered">Analise (%s) cadastrada com sucesso!</string>
    <string name="analisis_notfound">Análise não encontrada</string>
    <string name="no_server_communication">Não foi possivel comunicar-se com o servidor</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="invalid_url">URL Inválida</string>
    <string name="invalid_value">Valor inválido</string>
    <string name="finalvalue_must_be_bigger">O valor final deve ser maior que o inicial</string>
    <string name="bigger_than_0">Deve ser maior que 0</string>
    <string name="sending">Enviando …</string>
    <string name="upload_completed">Upload completo</string>
    <string name="select_video_error">Erro ao selecionar vídeo!</string>
    <string name="config_saved">Configurações salvas</string>
    <string name="config_invalid">Configurações inválidas</string>
    <string name="collection_date">Data de coleta</string>
    <string name="collection_date_value">Data de coleta: %s</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="quadrants">Quadrantes</string>
    <string name="import_default_quadrants">Importar Padrão</string>
    <string name="file_format">Formato de arquivos</string>
    <string name="frame_file_format">Formato de arquivo dos frames</string>
    <string name="default_interval">1000</string>
    <string-array name="filetypes">
        <item>PNG</item>
        <item>JPG</item>
        <item>BMP</item>
        <item>TIFF</item>
    </string-array>
</resources>
