<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ConfiguracoesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- API URL -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/api_url"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_url"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:background="@color/backgroundInput"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:padding="10dp"
            android:text="http://192.168.0.1"
            tools:ignore="HardcodedText" />

        <!-- API PORT -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/api_port"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_port"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:background="@color/backgroundInput"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:text="3000"
            tools:ignore="HardcodedText" />


        <!-- Frames por segundo (FPS) -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frames_per_second"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_fps"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/backgroundInput"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:text="1"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>