<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".NovaAnaliseActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <!-- Tempo do Experimento -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experiment_time"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_tempo"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/backgroundInput"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:drawablePadding="5dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp" />



        <!-- Placa -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/board"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_placa"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/backgroundInput"
            android:drawableStart="@drawable/ic_grid_on_black_24dp"
            android:drawablePadding="5dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp" />


    </LinearLayout>


    <!-- Continuar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_continuar"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/select_video"
            android:textAllCaps="true"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>